# cltoolkit

./: .gitignore  .zenodo.json  LICENSE  README.md  RELEASING.md  example.md  setup.cfg  setup.py
.github/workflows/: python-package.yml
docs/: conf.py  features.rst  index.rst  models.rst  wordlist.rst
examples/: base.py  base2.py  features.json
src/cldftk/: __init__.py  inventories.py  util.py
src/cldftk/features/: phonology.py
src/cldftk/models/: form.py
src/cltoolkit/: __init__.py  inventories.py  log.py  models.py  util.py  validate.py  wordlist.py  wordlistx.py
src/cltoolkit/features/: __init__.py  collection.py  features.json  lexicon.py  phonology.py  reqs.py  util.py
src/cltoolkit/models/: __init__.py  concept.py  language.py  sounds.py
tests/: conftest.py  quick.py  test_features_collection.py  test_features_reqs.py  test_inv.py  test_inventories.py  test_lexicon.py  test_models.py  test_phonology.py  test_syllabification_tilde.py  test_util.py  test_wordlist.py
tests/repos/carvalhopurus/: lexibank_carvalhopurus.py  metadata.json
tests/repos/carvalhopurus/cldf/: .transcription-report.json  cldf-metadata.json  cognates.csv  forms.csv  languages.csv  parameters.csv  requirements.txt  sources.bib
tests/repos/concepticon/concepticondata/: concepticon.tsv
tests/repos/dummy/: lexibank_dummy.py
tests/repos/dummy/cldf/: cognates.csv  forms.csv  languages.csv  parameters.csv  sources.bib
tests/repos/features/: lexibank_features.py  metadata.json
tests/repos/features/cldf/: cldf-metadata.json  forms.csv  languages.csv  parameters.csv  sources.bib
tests/repos/jipa/: cldfbench_jipa.py  metadata.json
tests/repos/jipa/cldf/: StructureDataset-metadata.json  features.csv  languages.csv  requirements.txt  sources.bib  values.csv
tests/repos/jipa/etc/: languages.csv
tests/repos/jipa/raw/: Amarasi.txt  American English - Southern Michigan.txt  Amharic.txt  Arabic.txt  Assamese.txt  Australian English.txt  Azerbaijani.txt  Bardi.txt  Basaa.txt  Basque (Western Low Navarrese dialect).txt  Belgian Limburg dialect of Hamont.txt  Belgian Standard Dutch.txt  Bemba.txt  Brunei Malay.txt  (+147 more)
tests/repos/wangbcd/: lexibank_wangbcd.py
(+6 files in other folders)
